# untex

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: bug.yml  documentation.yml  feature_request.yml  support.yml
.github/workflows/: coderage.yml  languagetool.yml  rustcheck.yml  rustdoc.yml  rustlib.yml  rustlints.yml  rustmsrv.yml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_target_1.rs
src/: bin.rs
src/lib/: category_codes.rs  chars.rs  check.rs  deps.rs  error.rs  explain.rs  lexer.rs  lib.rs  parse.rs  parse_new.rs  prelude.rs  token.rs
src/lib/cli/: color.rs  complete.rs  format.rs  highlight.rs  io.rs  mod.rs  traits.rs
src/lib/latex/: format.rs  highlight.rs  mod.rs  parse.rs  token.rs
src/lib/tex/: category_codes.rs  mod.rs
tests/data/: check_fails.tex  minimal.tex  pgfplots_table.tex
