[[bin]]
doc = false
name = "fuzz_target_1"
path = "fuzz_targets/fuzz_target_1.rs"
test = false

[dependencies]
fuzz = "0.1.1"
libfuzzer-sys = "0.4"
logos = "0.12.1"

[dependencies.untex]
path = ".."

[package]
edition = "2021"
name = "untex-fuzz"
publish = false
version = "0.0.0"

[package.metadata]
cargo-fuzz = true

[profile.release]
debug = 1

# Prevent this from interfering with workspaces
[workspace]
members = ["."]
